[package]
description = "Stable springs for game development usecases"
edition = "2021"
name = "springy"
version = "0.1.0"

[features]
rapier2d = [
  "bevy_rapier2d",
]
rapier3d = [
  "bevy_rapier3d",
]

[dependencies]
bevy = "0.8"
bevy-inspector-egui = "0.13"
bevy_editor_pls = "*"
bevy_rapier2d = {version = "0.17", optional = true}
bevy_rapier3d = {version = "0.17", optional = true}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "rapier"
path = "examples/bevy_rapier.rs"
required_features = ["rapier2d"]

[[example]]
name = "bevy_simple"
path = "examples/bevy_simple.rs"
