[package]
authors = ["aceeri <conmcclusk@gmail.com>"]
categories = ["game-development"]
description = "Stable springs for game development usecases"
edition = "2021"
keywords = ["springs", "gamedev", "bevy"]
license = "MIT OR Apache-2.0"
name = "springy"
readme = "README.md"
repository = "https://github.com/aceeri/springy"
version = "0.1.0"

[features]
rapier2d = [
  "bevy_rapier2d",
]
rapier3d = [
  "bevy_rapier3d",
]

[dependencies]
bevy = {version = "0.10", default-features = false}
bevy-inspector-egui = "0.18"
bevy_rapier2d = {version = "0.21", optional = true}
bevy_rapier3d = {version = "0.21", optional = true}

[dev-dependencies]
bevy = {version = "0.10", default-features = true}
bevy_editor_pls = "0.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "rapier"
path = "examples/bevy_rapier.rs"
required-features = ["rapier2d"]

[[example]]
name = "simple"
path = "examples/bevy_simple.rs"

[[example]]
name = "energy"
path = "examples/energy.rs"
