[package]
authors = ["aceeri <conmcclusk@gmail.com>"]
categories = ["game-development"]
description = "Stable springs for game development usecases"
edition = "2021"
keywords = ["springs", "gamedev", "bevy"]
license = "MIT OR Apache-2.0"
name = "springy"
readme = "README.md"
repository = "https://github.com/aceeri/springy"
version = "0.1.0"

[features]
rapier2d = [
  "bevy_rapier2d",
]
rapier3d = [
  "bevy_rapier3d",
]

[dependencies]
bevy = {version = "0.11", default-features = false}
bevy-inspector-egui = "0.19"
bevy_rapier2d = {version = "0.22", optional = true}
bevy_rapier3d = {version = "0.22", optional = true}
#bevy_framepace = "0.12"

[dev-dependencies]
bevy = {version = "0.11", default-features = true}
#bevy_editor_pls = "0.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "rapier_2d"
path = "examples/rapier_2d.rs"
required-features = ["rapier2d"]

[[example]]
name = "simple_2d"
path = "examples/simple_2d.rs"

[[example]]
name = "simple_3d"
path = "examples/simple_3d.rs"

[[example]]
name = "energy"
path = "examples/energy.rs"
